--- a/templates/experiencia.html
+++ b/templates/experiencia.html
@@ -1,200 +1,96 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+{% extends "base.html" %}
+{% block main %}
+      
+  <!-- Header -->
+  <header class="fixed left-0">
+    <a
+      href="https://github.com/lehinfo-felix"
+      class="flex items-center justify-center w-full px-16 text-white mt-16"
+      target="_blank"
+    >
+      <div class="flex items-center">
+        <img
+          src="https://avatars.githubusercontent.com/u/58048297"
+          class="w-12 h-12 rounded-full"
+          alt="foto de perfil"
+        />
+        <h3 class="font-bold px-2">Leandro Felix</h3>
+        <img
+          src="{{ url_for('static', filename='verificate.svg') }}"
+          alt="verificate icon"
+          class="w-6 text-white"
+        />
+      </div>
+    </a>
+  </header>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-    <title>Experiência profissional - Leandro Félix</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
-    />
-    <link
-      rel="shortcut icon"
-      href="{{ url_for('static', filename='verificate.svg') }}"
-      type="image/x-icon"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
-    />
-  </head>
-  <body class="overflow-hidden flex flex-col justify-center items-center z-10">
-    <div class="z-10 h-full w-full items-center justify-center">
-      <!-- Header -->
-      <header class="fixed left-0">
-        <a
-          href="https://github.com/lehinfo-felix"
-          class="flex items-center justify-center w-full px-16 text-white mt-16"
-          target="_blank"
-        >
-          <div class="flex items-center">
-            <img
-              src="https://avatars.githubusercontent.com/u/58048297"
-              class="w-12 h-12 rounded-full"
-              alt="foto de perfil"
-            />
-            <h3 class="font-bold px-2">Leandro Felix</h3>
-            <img
-              src="{{ url_for('static', filename='verificate.svg') }}"
-              alt="verificate icon"
-              class="w-6 text-white"
-            />
-          </div>
-        </a>
-      </header>
-
-      <!-- Main -->
-      <main class="w-full flex flex-col items-center justify-center h-full">
-        <div class="flex flex-row my-8">
-          <div class="bg-purple-400 w-1"></div>
-          <h1 class="text-3xl font-bold text-zinc-100 ml-4">
-            Experiência profissional
-          </h1>
+  <!-- Main -->
+  <main class="w-full flex flex-col items-center justify-center h-full">
+    <div class="flex flex-row my-8">
+      <div class="bg-purple-400 w-1"></div>
+      <h1 class="text-3xl font-bold text-zinc-100 ml-4">
+        Experiência profissional
+      </h1>
+    </div>
+    <!-- Card1 -->
+    <div class="flex items">
+      <div class="flex flex-col w-40">
+        <h2 class="text-zinc-100 text-md">Designer gráfico freelancer</h2>
+        <div class="text-zinc-500">
+          <h4 class="text-sm">Instituto Agir</h4>
+          <p class="text-xs mt-4 mb-4">
+            <i class="uil uil-calendar-alt"></i> 2020 - atualmente
+          </p>
         </div>
-        <!-- Card1 -->
-        <div class="flex items">
-          <div class="flex flex-col w-40">
-            <h2 class="text-zinc-100 text-md">Designer gráfico freelancer</h2>
-            <div class="text-zinc-500">
-              <h4 class="text-sm">Instituto Agir</h4>
-              <p class="text-xs mt-4 mb-4">
-                <i class="uil uil-calendar-alt"></i> 2020 - atualmente
-              </p>
-            </div>
-          </div>
-          <div class="flex flex-col justify-center items-center mx-4">
-            <div class="bg-purple-600 w-3 h-3.5 rounded-full"></div>
-            <div class="bg-purple-600 w-0.5 h-full"></div>
-          </div>
-          <div class="mt-12 flex flex-col w-40">
-            <h2 class="text-zinc-100 text-md">Estagiário Design gráfico</h2>
-            <div class="text-zinc-500">
-              <h4 class="text-sm">Papel e Art</h4>
-              <p class="text-xs mt-4 mb-4">
-                <i class="uil uil-calendar-alt"></i> 2021
-              </p>
-            </div>
-          </div>
+      </div>
+      <div class="flex flex-col justify-center items-center mx-4">
+        <div class="bg-purple-600 w-3 h-3.5 rounded-full"></div>
+        <div class="bg-purple-600 w-0.5 h-full"></div>
+      </div>
+      <div class="mt-12 flex flex-col w-40">
+        <h2 class="text-zinc-100 text-md">Estagiário Design gráfico</h2>
+        <div class="text-zinc-500">
+          <h4 class="text-sm">Papel e Art</h4>
+          <p class="text-xs mt-4 mb-4">
+            <i class="uil uil-calendar-alt"></i> 2021
+          </p>
         </div>
-
-        <!-- Card2 -->
-        <div class="flex items">
-          <div class="flex flex-col w-40">
-            <h2 class="text-zinc-100 text-md">
-              Designer gráfico e projetista 3D
-            </h2>
-            <div class="text-zinc-500">
-              <h4 class="text-sm">Alfa Comunicação Visual</h4>
-              <p class="text-xs mt-4 mb-4">
-                <i class="uil uil-calendar-alt"></i> 2021 - 2022
-              </p>
-            </div>
-          </div>
-          <div class="flex flex-col justify-center items-center mx-4">
-            <div class="bg-purple-600 w-3 h-3.5 rounded-full"></div>
-            <div class="bg-purple-600 w-0.5 h-full"></div>
-          </div>
-          <div class="mt-12 flex flex-col w-40">
-            <h2 class="text-zinc-100 text-md">Desenvolvedor Web freelancer</h2>
-            <div class="text-zinc-500">
-              <h4 class="text-sm">Alfa Comunicação Visual</h4>
-              <p class="text-xs mt-4 mb-4">
-                <i class="uil uil-calendar-alt"></i> 2022
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card3 -->
-        <div class="flex flex-col justify-center items-center mx-4">
-          <div class="bg-purple-600 w-3 h-3.5 rounded-full"></div>
-          <div class="bg-purple-600 w-0.5 h-full"></div>
-        </div>
-      </main>
-
-      <!-- Footer navigation -->
-      <nav class="text-white fixed bottom-6 w-full flex justify-center">
-        <ul class="flex justify-between">
-          <li
-            class="border-transparent font-bold px-2 border-b-4 ease-in-out transition-all mx-4 hover:border-purple-500"
-          >
-            <a href="/">
-              <i class="uil uil-estate text-xl"></i>
-            </a>
-          </li>
-          <li
-            class="px-2 border-b-4 border-transparent ease-in-out transition-all mx-4 hover:border-purple-500"
-          >
-            <a href="/sobre">
-              <i class="uil uil-info-circle text-xl"></i>
-            </a>
-          </li>
-          <li
-            class="px-2 border-b-4 border-transparent ease-in-out transition-all mx-4 hover:border-purple-500"
-          >
-            <a href="/formacao">
-              <i class="uil uil-graduation-cap text-xl border-purple-700"></i>
-            </a>
-          </li>
-          <li
-            class="border-purple-700 px-2 border-b-4 ease-in-out transition-all mx-4 hover:border-purple-500"
-          >
-            <a href="/experiencia">
-              <i class="uil uil-bag-alt text-xl"></i>
-            </a>
-          </li>
-
-          <li
-            class="px-2 border-b-4 border-transparent ease-in-out transition-all mx-4 hover:border-purple-500"
-          >
-            <a href="/contato">
-              <i class="uil uil-navigator text-xl"></i>
-            </a>
-          </li>
-        </ul>
-      </nav>
+      </div>
     </div>
 
-    <div class="w-full h-full z-0">
-      <img
-        src="{{ url_for('static', filename='blur1.svg') }}"
-        alt=""
-        class="fixed bottom-0 left-0"
-      />
-      <img
-        src="{{ url_for('static', filename='blur2.svg') }}"
-        alt=""
-        class="fixed top-0 right-0"
-      />
+    <!-- Card2 -->
+    <div class="flex items">
+      <div class="flex flex-col w-40">
+        <h2 class="text-zinc-100 text-md">
+          Designer gráfico e projetista 3D
+        </h2>
+        <div class="text-zinc-500">
+          <h4 class="text-sm">Alfa Comunicação Visual</h4>
+          <p class="text-xs mt-4 mb-4">
+            <i class="uil uil-calendar-alt"></i> 2021 - 2022
+          </p>
+        </div>
+      </div>
+      <div class="flex flex-col justify-center items-center mx-4">
+        <div class="bg-purple-600 w-3 h-3.5 rounded-full"></div>
+        <div class="bg-purple-600 w-0.5 h-full"></div>
+      </div>
+      <div class="mt-12 flex flex-col w-40">
+        <h2 class="text-zinc-100 text-md">Desenvolvedor Web freelancer</h2>
+        <div class="text-zinc-500">
+          <h4 class="text-sm">Alfa Comunicação Visual</h4>
+          <p class="text-xs mt-4 mb-4">
+            <i class="uil uil-calendar-alt"></i> 2022
+          </p>
+        </div>
+      </div>
     </div>
 
-    <script>
-      const body = document.querySelector("body");
-      body.style = `
-      background-image: '{{ url_for('static', filename='blur1.svg') }}';
-        background-color: #0e141b;
-        font-family: 'Inter', sans-serif;
-       `;
+    <!-- Card3 -->
+    <div class="flex flex-col justify-center items-center mx-4">
+      <div class="bg-purple-600 w-3 h-3.5 rounded-full"></div>
+      <div class="bg-purple-600 w-0.5 h-full"></div>
+    </div>
+  </main>
 
-      var mySwiper = new Swiper(".swiper-container", {
-        loop: true,
-        autoplay: {
-          delay: 2000,
-        },
-      });
-    </script>
-  </body>
-</html>
+{% endblock %}
